Changelog
=========

1.5.2.2 (unreleased)
--------------------

- Nothing changed yet.


1.5.2.1 (2011-08-25)
--------------------

- Do not fullcalendar.min.js compression by resources registry,
  which is compressed by default.


1.5.2 (2011-08-23)
------------------

- Fullcalendar 1.5.2


1.1 (2011-03-28)
----------------

- Fullcalendar 1.5.


1.0 (2010-10-07)
----------------

- Initial release