@@ -1,6 +1,10 @@
 <?xml version="1.0"?>
 <object name="portal_css">
 
- <stylesheet id="++resource++collective.js.fullcalendar/fullcalendar.css" />
+ <stylesheet id="++resource++collective.js.fullcalendar/fullcalendar.css"
+             media="all" />
+
+ <stylesheet id="++resource++collective.js.fullcalendar/fullcalendar.print.css"
+             media="print" />
 
 </object>
