@@ -12,50 +12,52 @@
  * Date: Sun Aug 21 22:06:09 2011 -0700
  *
  */
- 
- 
+
+
  /* Events
 -----------------------------------------------------*/
- 
+
 .fc-event-skin {
 	background: none !important;
 	color: #000 !important;
 	}
-	
+
 /* horizontal events */
-	
+
 .fc-event-hori {
 	border-width: 0 0 1px 0 !important;
 	border-bottom-style: dotted !important;
 	border-bottom-color: #000 !important;
 	padding: 1px 0 0 0 !important;
 	}
-	
+
 .fc-event-hori .fc-event-inner {
 	border-width: 0 !important;
 	padding: 0 1px !important;
 	}
-	
+
 /* vertical events */
-	
+
 .fc-event-vert {
 	border-width: 0 0 0 1px !important;
 	border-left-style: dotted !important;
 	border-left-color: #000 !important;
 	padding: 0 1px 0 0 !important;
 	}
-	
+
 .fc-event-vert .fc-event-inner {
 	border-width: 0 !important;
 	padding: 1px 0 !important;
 	}
-	
+
 .fc-event-bg {
 	display: none !important;
 	}
-	
+
 .fc-event .ui-resizable-handle {
 	display: none !important;
 	}
-	
-	
+
+.fc-button {
+	display: none !important;
+}
