@@ -4,14 +4,16 @@ Changelog
 1.5.2.2 (unreleased)
 --------------------
 
-- Nothing changed yet.
+- Include fullcalendar print css for print media.
+  [thomasdesvenain]
 
 
 1.5.2.1 (2011-08-25)
 --------------------
 
-- Do not fullcalendar.min.js compression by resources registry,
+- Disable fullcalendar.min.js compression by resources registry,
   which is compressed by default.
+  [thomasdesvenain]
 
 
 1.5.2 (2011-08-23)
